--- a/style.css
+++ b/style.css
@@ -1,15 +1,41 @@
-td{
+* {
+    margin: auto;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
+}
+
+h1{
+    font-size: 100px;
+}
+/*checker board*/
+td {
+    text-align: center;
     background-color: chocolate;
     width: 65px;
     height: 65px;
-    text-align: center;
 }
 
-.noPiece{
+.noPieceHere {
     background-color: cornsilk;
 }
 
-.red-piece{
+/*checker pieces*/
+.black-piece {
+    width: 20px;
+    height: 20px;
+    padding: 12px;
+    background-color: black;
+    border: 1px solid white;
+    border-radius: 50px;
+}
+
+.red-piece {
     width: 20px;
     height: 20px;
     padding: 12px;
@@ -18,11 +44,44 @@ td{
     border-radius: 50px;
 }
 
-.black-piece{
-    width: 20px;
-    height: 20px;
-    padding: 12px;
-    background-color: black;
-    border: 1px solid white;
-    border-radius: 50px;
+/*winning checker pieces*/
+.king.red-piece {
+    background-color: orange;
+}
+
+.king.black-piece {
+    background-color: purple;
+}
+
+div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.red-turn-text {
+    text-align: center;
+    color: black;
+    font-family: "open sans";
+    font-size: 55px;
+}
+
+.black-turn-text {
+    text-align: center;
+    font-family: "open sans";
+    font-size: 55px;
+    color: lightgray;
+}
+
+p {
+    display: inline-block;
+}
+
+#divider {
+    font-size: 90px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+span {
+    display: inline-block;
 }
