--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     margin: auto;
+    background-color: rgb(248, 203, 211);
 }
 
 main {
@@ -10,9 +11,11 @@ main {
     height: 100vh;
 }
 
+/*title*/
 h1{
     font-size: 100px;
 }
+
 /*checker board*/
 td {
     text-align: center;
@@ -23,6 +26,10 @@ td {
 
 .noPieceHere {
     background-color: cornsilk;
+}
+
+table{
+    border: 5px solid black;
 }
 
 /*checker pieces*/
@@ -44,13 +51,22 @@ td {
     border-radius: 50px;
 }
 
-/*winning checker pieces*/
+/*winning checker pieces (king)*/
 .king.red-piece {
     background-color: orange;
 }
 
 .king.black-piece {
     background-color: purple;
+}
+
+/*checker board tiles*/
+p {
+    display: inline-block;
+}
+
+span {
+    display: inline-block;
 }
 
 div {
@@ -69,12 +85,9 @@ div {
     text-align: center;
     font-family: "open sans";
     font-size: 55px;
-    color: lightgray;
+    color: darkgray;
 }
 
-p {
-    display: inline-block;
-}
 
 #divider {
     font-size: 90px;
@@ -82,6 +95,4 @@ p {
     margin-right: 15px;
 }
 
-span {
-    display: inline-block;
-}
+
