--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: auto;
-    background-color: rgb(248, 203, 211);
+    background-color: white;
 }
 
 main {
@@ -85,7 +85,7 @@ div {
     text-align: center;
     font-family: "open sans";
     font-size: 55px;
-    color: darkgray;
+    color: lightgrey;
 }
 
 
