--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+
+/**body*/
 * {
     margin: auto;
-    background-color: rgb(250, 225, 225);
+    background-color: #a1bc9d;
 }
 
 main {
@@ -13,7 +15,7 @@ main {
 
 /*title*/
 h1{
-    color: rgb(48, 60, 41);
+    color: #303c29;
     font-size: 100px;
 }
 
@@ -31,7 +33,7 @@ td {
 
 table{
     border: 5px solid black;    
-    box-shadow: 10px 10px 8px 10px rgb(201, 128, 140);
+    box-shadow: 10px 10px 8px 10px #39563a;
 }
 
 /*checker pieces*/
@@ -52,7 +54,7 @@ table{
     background-color: darkred;
     border: 1px solid white;
     border-radius: 50px;
-    box-shadow: 10px 10px 8px rgb(108, 52, 11);
+    box-shadow: 10px 10px 8px #6c340b;
 }
 
 /*winning checker pieces (king)*/
@@ -64,7 +66,7 @@ table{
     background-color: purple;
 }
 
-/*checker board tiles*/
+/*checker board til*/
 p {
     display: inline-block;
 }
@@ -78,24 +80,33 @@ div {
     justify-content: space-between;
 }
 
-.red-turn-text {
+/*turn / score*/
+.red-text {
     text-align: center;
     color: black;
     font-family: "open sans";
-    font-size: 55px;
+    font-size: 40px;
+    background-color:#39563a 
 }
 
-.black-turn-text {
+.black-text {
     text-align: center;
-    color: lightgray;
+    color: #718171;
     font-family: "open sans";
-    font-size: 55px;
+    font-size: 40px;
+    background-color: #39563a; 
+}
+
+.turn{
+    border: 4px solid black;
+    background-color: #39563a;
 }
 
 #divider {
     font-size: 90px;
-    margin-left: 15px;
-    margin-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background-color: #39563a 
 }
 
 
