--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /**body*/
 * {
     margin: auto;
@@ -16,7 +15,7 @@ main {
 /*title*/
 h1{
     color: #303c29;
-    font-size: 100px;
+    font-size: 75px;
 }
 
 /*checker board*/
@@ -27,7 +26,7 @@ td {
     height: 65px;
 }
 
-.noPieceHere {
+.noPiece {
     background-color: cornsilk;
 }
 
@@ -66,7 +65,7 @@ table{
     background-color: purple;
 }
 
-/*checker board til*/
+/*checker board tiles*/
 p {
     display: inline-block;
 }
@@ -102,7 +101,7 @@ div {
     background-color: #39563a;
 }
 
-#divider {
+.divider {
     font-size: 90px;
     padding-left: 15px;
     padding-right: 15px;
